--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ $ python3 main.py
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Created with ♥ by <a href="https://github.com/ishankhare07" class="user-mention">@ishankhare07</a> as a minor project</p>
-<p><a href="https://github.com/ishankhare07/multi-language-ide#fork-destination-box">fork</a> this repo on github</p>
-<p>Open source contributions are most welcomed. Head over to the <a href="https://github.com/ishankhare07/multi-language-ide/">repo</a> and start working on an issue</p>
+<p>Created with ♥ by <a href="https://github.com/ishankhare07" class="user-mention">@ishankhare07</a> as a minor project<br>
+<a href="https://github.com/ishankhare07/multi-language-ide#fork-destination-box">fork</a> this repo on github<br>
+Open source contributions are most welcomed. Head over to the <a href="https://github.com/ishankhare07/multi-language-ide/">repo</a> and start working on an issue<br>
 <p>Alternatively create a new issue and work on the issue</p>
         </section>
 
