--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $ python3 main.py
 <p>Created with ♥ by <a href="https://github.com/ishankhare07" class="user-mention">@ishankhare07</a> as a minor project
 <a href="https://github.com/ishankhare07/multi-language-ide#fork-destination-box">fork</a> this repo on github
 Open source contributions are most welcomed. Head over to the <a href="https://github.com/ishankhare07/multi-language-ide/">repo</a> and start working on an issue
-<p>Alternatively create a new issue and work on the issue</p>
+Alternatively create a new issue and work on the issue
         </section>
 
         <aside id="sidebar">
